force-app/main/default/objects/Term_Condition_Default_Values__mdt/Term_Condition_Default_Values__mdt.object-meta.xml
<CustomObject>
    <label>Term &amp; Condition Default Values</label>
    <pluralLabel>Term &amp; Condition Default Values</pluralLabel>
</CustomObject>