force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/Adv_Written_Notice_Period_Renewal_Cntrct__c.field-meta.xml
<CustomField>
    <fullName>Adv_Written_Notice_Period_Renewal_Cntrct__c</fullName>
    <label>Adv Written Notice Period Renewal Cntrct</label>
    <length>225</length>
    <type>Text</type>
</CustomField>