force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/Equipment_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sale_Value__c</fullName>
    <label>Equipment Sale Value</label>
    <length>225</length>
    <type>Text</type>
</CustomField>