force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/Late_Payment_Invoice_Interest__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Invoice_Interest__c</fullName>
    <label>Late Payment Invoice Interest</label>
    <length>225</length>
    <type>Text</type>
</CustomField>