force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/One_Time_Charges_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Charges_Third_Party__c</fullName>
    <label>One Time Charges Third Party</label>
    <length>225</length>
    <type>Text</type>
</CustomField>