force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/Recurring_Charges_Other_Party_c__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charges_Other_Party_c__c</fullName>
    <label>Recurring Charges Other Party</label>
    <length>225</length>
    <type>Text</type>
</CustomField>