force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/Recurring_Charges_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charges_Third_Party__c</fullName>
    <label>Recurring Charges Third Party</label>
    <length>225</length>
    <type>Text</type>
</CustomField>