force-app/main/default/objects/Term_Condition_Default_Values__mdt/fields/Termination_Fee_Renewal_Contract__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Renewal_Contract__c</fullName>
    <label>Termination Fee Renewal Contract</label>
    <length>225</length>
    <type>Text</type>
</CustomField>